# kubevirt-gen

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: as.json  main.rs  s.json  s.yml  s2.json  template.yml
src/routes/: echo.rs  generate.rs  mod.rs  service.rs  virtual_machine.rs
