[package]
name = "kubevirt-gen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
tokio = { version = "1.18.2", features = [ "macros", "rt-multi-thread" ] }
